[package]
name = "qcl"
description = "A Query Check Language written in Rust"
version = "0.1.0"
edition = "2021"
authors = ["lollipopkit <a@lpkt.cn>"]
license = "Apache-2.0"
repository = "https://github.com/lollipopkit/qcl"

[package.metadata.cargo-test]
args = ["--", "--nocapture"]

[dependencies]
anyhow = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[features]
default = ["sem_arith"]
# Semantic arith: 3 / 2 = 1.5, not 1
sem_arith = []
# Advanced arithmetic support: Map + Map, List + Val etc.
adv_arith = []
all = ["sem_arith", "adv_arith"]

[[bin]]
name = "qcl"
path = "bin/src/main.rs"
